--- a/elbot/index.html
+++ b/elbot/index.html
@@ -127,7 +127,7 @@
 
         <div class="section-title">
           <h2>Page d'aide</h2>
-          <p>Ici vous trouverez toutes les commandes de Elbot. (le prefix est "e!") [mise à jour: 22/12/2021 10h32]<br> <h8>45 commandes fonctionnelles et publiques.</h8></p>
+          <p>Ici vous trouverez toutes les commandes de Elbot. (le prefix est "e!") [mise à jour: 24/12/2021 10h32]<br> <h8>44 commandes fonctionnelles et publiques.</h8></p>
         </div>
 <div><b>COMMANDES ÉCRITES</b></div>
       
@@ -150,112 +150,104 @@
   <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
     <div class="icon-box iconbox-blue">
       <h4>embed &lt;titre&gt;§&lt;description&gt;§<br>&lt;footer&gt;§&lt;couleur&gt;</h4>
-      <p><b>Description : </b>Créer un embed à partir de elbot <h10><b>VERSION BETA </b></h10><br><b>Permission : </b>Envoyer un embed<br><b>WARN : </b>La séparation est § <b> <br>Exemple: </b>e!embed Ça c'est le titre§ça c'est la description§ça c'est le footer§et là, la couleur. (voir commande list_color)</p>
+      <p><b>Description : </b>Créer un embed à partir de elbot <h10><b>VERSION BETA </b></h10><br><b>Permission : </b>Aucune<br><b>WARN : </b>La séparation est § <b> <br>Exemple: </b>e!embed Ça c'est le titre§ça c'est la description§ça c'est le footer§et là, la couleur. (voir commande list_color)</p>
     </div>
   </div>
 
   <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
     <div class="icon-box iconbox-blue">
       <h4>list_color</h4>
-      <p><b>Description : </b>Connaitre les couleurs disponibles pour elbot<br><b>Permission : </b>Envoyer un embed<br><b>WARN : </b>Si vous souhaitez faire la proposition d'une couleur n'hésitez pas contacter el2zay à l'aide de la commande e!contact.</p>
+      <p><b>Description : </b>Connaitre les couleurs disponibles pour elbot<br><b>Permission : </b>Aucune<br><b>WARN : </b>Si vous souhaitez faire la proposition d'une couleur n'hésitez pas contacter el2zay à l'aide de la commande e!contact.</p>
     </div>
   </div>
 
   <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
     <div class="icon-box iconbox-blue">
       <h4>contact &lt;texte&gt;</h4>
-      <p><b>Description : </b>Pour contacter el2zay via le bot<br><b>Permission : </b>Envoyer un message<br><b>WARN :</b> Aucun</p>
+      <p><b>Description : </b>Pour contacter el2zay via le bot<br><b>Permission : </b>Aucune<br><b>WARN :</b> Aucun</p>
     </div>
   </div>
 
     <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
       <div class="icon-box iconbox-blue">
         <h4>count &lt;texte&gt;</h4>
-        <p><b>Description : </b>Compter le nombre de caractères dans un mot ou une phrase.<br><b>Permission : </b>Envoyer un message<br><b>WARN : Aucun</b></p> </div>
+        <p><b>Description : </b>Compter le nombre de caractères dans un mot ou une phrase.<br><b>Permission : </b>Aucune<br><b>WARN : </b>Aucun</p> </div>
       </div>
 
 
   <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
     <div class="icon-box iconbox-blue">
       <h4>sondage &lt;texte&gt;</h4><h11>(argument facultatif)</h11>
-      <p><b>Description : </b>Créer un sondage avec les choix "oui" et "non" grâce aux réactions.<br><b>Permission : </b>Envoyer un message et des réactions<br><b>WARN : </b>Aucun.</b></p>
+      <p><b>Description : </b>Créer un sondage avec les choix "oui" et "non" grâce aux réactions.<br><b>Permission : </b>Aucune et des réactions<br><b>WARN : </b>Aucun.</b></p>
     </div>
   </div>
 
   <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
     <div class="icon-box iconbox-blue">
       <h4>infoserver/serverinfo</h4>
-      <p><b>Description : </b>Pour connaitre les informations importantes sur ce serveur<br><b>Permission : </b>Envoyer un message embed<br><b>WARN: </b>Aucun</b></p>
+      <p><b>Description : </b>Pour connaitre les informations importantes sur ce serveur<br><b>Permission : </b>Aucune embed<br><b>WARN: </b>Aucun</b></p>
     </div>
   </div>
 
   <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
     <div class="icon-box iconbox-blue">
       <h4>infoserver2/serverinfo2</h4>
-      <p><b>Description : </b>Suite sur infoverser/serverinfo<br><b>Permission : </b>Envoyer un message embed<br><b>WARN: </b>Aucun</b></p>
+      <p><b>Description : </b>Suite sur infoverser/serverinfo<br><b>Permission : </b>Aucune embed<br><b>WARN: </b>Aucun</b></p>
     </div>
   </div>
 
   <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
     <div class="icon-box iconbox-blue">
-      <h4>infouser &lt;user&gt;</h4><h11>(argument facultatif)</h11>
-      <p><b>Description : </b>Pour connaitre les informations sur un utilisateur<br><b>Permission : </b>Envoyer un message embed<br><b>WARN: </b>Aucun</b></p>
+      <h4>infouser / avatar &lt;user&gt;</h4><h11>(argument facultatif)</h11>
+      <p><b>Description : </b>Pour connaitre les informations sur un utilisateur<br><b>Permission : </b>Aucune embed<br><b>WARN: </b>Aucun</b></p>
     </div>
   </div>
 
   <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
     <div class="icon-box iconbox-blue">
       <h4>set_birthday / add_birthday <br> &lt;JJ mois AAAA&gt;</h4>
-      <p><b>Description : </b>Ajouter ou modifier la date de son anniversaire.<br><b>Permission : </b>Envoyer un message.<br><b>WARN: </b>Votre anniversaire est affiché sur tous les serveurs où vous êtes et où est Elbot. Pas besoin de mettre plein de fois son anniversaire sur plein de serveurs.<br>C'est cool hein :S</b></p>
+      <p><b>Description : </b>Ajouter ou modifier la date de son anniversaire.<br><b>Permission : </b>Aucune.<br><b>WARN: </b>Votre anniversaire est affiché sur tous les serveurs où vous êtes et où est Elbot. Pas besoin de mettre plein de fois son anniversaire sur plein de serveurs.<br>C'est cool hein :S</b></p>
     </div>
   </div>
 
   <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
     <div class="icon-box iconbox-blue">
       <h4>birthday &lt;membre&gt;</h4> <h11>(argument facultatif)</h11>
-      <p><b>Description : </b>Voir la liste des anniversaires. Vous pouvez aussi voir la liste d'un seul membre en le mentionnant.<br><b>Permission : </b>Envoyer un message.<br><b>WARN: </b>Votre anniversaire est affiché sur tous les serveurs où vous êtes et où est Elbot. Pas besoin de mettre plein de fois son anniversaire sur plein de serveurs.<br>C'est cool hein :S</b></p>
-    </div>
-  </div>
-
-
-  <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
-    <div class="icon-box iconbox-blue">
-      <h4>avatar &lt;membre&gt;</h4>
-      <p><b>Description : </b>Pour avoir l'avatar d'un utilisateur<br><b>Permission : </b>Envoyer un message embed<br><b>WARN: </b>Aucun</b></p>
+      <p><b>Description : </b>Voir la liste des anniversaires. Vous pouvez aussi voir la liste d'un seul membre en le mentionnant.<br><b>Permission : </b>Aucune.<br><b>WARN: </b>Votre anniversaire est affiché sur tous les serveurs où vous êtes et où est Elbot. Pas besoin de mettre plein de fois son anniversaire sur plein de serveurs.<br>C'est cool hein :S</b></p>
     </div>
   </div>
 
   <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
     <div class="icon-box iconbox-blue">
       <h4>number</h4>
-      <p><b>Description : </b>Pour avoir un nombre au hasard.<br><b>Permission : </b>Envoyer un message<br><b>WARN : </b>UNIQUEMENT EN SLASH</b> </p>
+      <p><b>Description : </b>Pour avoir un nombre au hasard.<br><b>Permission : </b>Aucune<br><b>WARN : </b>UNIQUEMENT EN SLASH</b> </p>
     </div>
   </div>
 
   <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
     <div class="icon-box iconbox-blue">
       <h4>heberger</h4>
-      <p><b>Description : </b> Pour savoir sur quel hébergeur je suis héberger en ce moment!<br><b>Permission : </b>Envoyer un message<br><b>WARN : </b>Peut ne pas être à jour automatiquement</p>
+      <p><b>Description : </b> Pour savoir sur quel hébergeur je suis héberger en ce moment!<br><b>Permission : </b>Aucune<br><b>WARN : </b>Peut ne pas être à jour automatiquement</p>
     </div>
   </div>
 
   <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
     <div class="icon-box iconbox-blue">
       <h4>ping</h4>
-      <p><b>Description : </b>Affiche le temps de latence du bot en ms.<br><b>Permission : </b>Envoyer un message<br><b>WARN : </b>Aucun</b>
+      <p><b>Description : </b>Affiche le temps de latence du bot en ms.<br><b>Permission : </b>Aucune<br><b>WARN : </b>Aucun</b>
     </div>
   </div>
 
   <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
     <div class="icon-box iconbox-blue">
-      <h4>clear &lt;nombre&gt;</h4>
+      <h4>clear &lt;nombre&gt;</h4> <h10>Commande fonctionnant mal</h10>
       <p><b>Description : </b>Pour clear le nombre de message que vous souhaitiez <br><b>Permission : </b>Gérer les messages<br><b>WARN : </b>Aucun</b>
     </div>
   </div>
   <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
     <div class="icon-box iconbox-blue">
       <h4>pessi</h4></a>
-      <p><b>Description : </b>Pour connaitre tous les mots de pessis<br><b>Permission : </b>Envoyer un message<br><b>WARN : </b>Aucun</p>
+      <p><b>Description : </b>Pour connaitre tous les mots de pessis<br><b>Permission : </b>Aucune<br><b>WARN : </b>Aucun</p>
     </div>
   </div>
   
@@ -269,13 +261,13 @@
   <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
     <div class="icon-box iconbox-blue">
       <h4>github</h4>
-      <p><b>Description : </b>Pour afficher le code github<br><b>Permission : </b>Envoyer un message<br><b>WARN : </b>Il est disponible sur ce site. Et le repo n'est pas mis à jour manuellement</b>
+      <p><b>Description : </b>Pour afficher le code github<br><b>Permission : </b>Aucune<br><b>WARN : </b>Il est disponible sur ce site. Et le repo n'est pas mis à jour manuellement</b>
     </div>
   </div>
   <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
     <div class="icon-box iconbox-blue">
       <h4>funfact</h4>
-      <p><b>Description : </b>Pour connaitre une anecdote sur Elbot.<br><b>Permission : </b>Envoyer un message<br><b>WARN : </b>Aucun
+      <p><b>Description : </b>Pour connaitre une anecdote sur Elbot.<br><b>Permission : </b>Aucune<br><b>WARN : </b>Aucun
     </div>
   </div>
   <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
@@ -343,7 +335,7 @@
   <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
     <div class="icon-box iconbox-blue">
       <h4>timer/minuteur &lt;secondes&gt;</h4><h10><b>VERSION BETA </b></h10>
-      <p><b>Description : </b>Pour lancer un minuteur à la fin de ce minuteur vous serez averti par MP<br><b>Permission </b>: Envoyer un message</b>.<br><b>WARN : </b>Secondes uniquement pour l'instant</p>
+      <p><b>Description : </b>Pour lancer un minuteur à la fin de ce minuteur vous serez averti par MP<br><b>Permission </b>: Aucune</b>.<br><b>WARN : </b>Secondes uniquement pour l'instant</p>
     </div>
   </div>
 
@@ -357,21 +349,21 @@
   <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
     <div class="icon-box iconbox-blue">
       <h4>watchbot</h4>
-      <p><b>Description : </b><br>Voir le statut des bots amis à Elbot au fil du temps à l'aide de Watchbot<br><b>Permission :</b> Envoyer un message</b>.<br><b>WARN : </b> Aucun. </p>
+      <p><b>Description : </b><br>Voir le statut des bots amis à Elbot au fil du temps à l'aide de Watchbot<br><b>Permission :</b> Aucune</b>.<br><b>WARN : </b> Aucun. </p>
     </div>
   </div>
 
   <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
     <div class="icon-box iconbox-blue">
       <h4>choix</h4>
-      <p><b>Description : </b><br>Commande pour test les boutons que j'ai laissé...<b><br> Permission :</b> Envoyer un message</b>.<br><b>WARN : </b> Aucun. </p>
+      <p><b>Description : </b><br>Commande pour test les boutons que j'ai laissé...<b><br> Permission :</b> Aucune</b>.<br><b>WARN : </b> Aucun. </p>
     </div>
   </div>
 
   <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
     <div class="icon-box iconbox-blue">
       <h4>roulette</h4>
-      <p><b>Description : </b>Pour tirer au hasard qui gagnera des participants un ban ou kick ou rôle personnalisé un mute ou un gage.<br><b>Permission : </b>Envoyer un message<br><b>WARN : </b>Aucun </p>
+      <p><b>Description : </b>Pour tirer au hasard qui gagnera des participants un ban ou kick ou rôle personnalisé un mute ou un gage.<br><b>Permission : </b>Aucune<br><b>WARN : </b>Aucun </p>
     </div>
   </div>
 
