--- a/elbot/index.html
+++ b/elbot/index.html
@@ -210,7 +210,7 @@
 
         <div class="section-title">
           <h2>Page d'aide</h2>
-          <p>Ici vous trouverez toutes les commandes de Elbot. (le prefix est "e!") [mise à jour: 24/12/2021 10h32]<br> <h8>44 commandes fonctionnelles et publiques.</h8></p>
+          <p>Ici vous trouverez toutes les commandes de Elbot. (le prefix est "e!") [mise à jour: 24/12/2021 10h32]<br> <h8>48 commandes fonctionnelles et publiques.</h8></p>
         </div>
 <div><b>COMMANDES ÉCRITES</b></div>
       
@@ -285,6 +285,12 @@
       <p><b>Description : </b>Pour connaitre les informations sur un utilisateur<br><b>Permission : </b>Aucune embed<br><b>WARN: </b>Aucun</b></p>
     </div>
   </div>
+  <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
+    <div class="icon-box iconbox-blue">
+      <h4>set_rep / set_reply <br> &lt;option&gt;</h4>
+      <p><b>Description : </b>Si vous souhaitez ou non les réponses automatiques de elbot du style : BONBON 🍬 ,Mais si c'est possible avec la carte kiwi... <br><b>Permission : </b>Administrateur<br><b>WARN: </b>Votre anniversaire est affiché sur tous les serveurs où vous êtes et où est Elbot. Pas besoin de mettre plein de fois son anniversaire sur plein de serveurs.<br>C'est cool hein :S</b></p>
+    </div>
+  </div>
 
   <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
     <div class="icon-box iconbox-blue">
@@ -297,6 +303,20 @@
     <div class="icon-box iconbox-blue">
       <h4>birthday &lt;membre&gt;</h4> <h11>(argument facultatif)</h11>
       <p><b>Description : </b>Voir la liste des anniversaires. Vous pouvez aussi voir la liste d'un seul membre en le mentionnant.<br><b>Permission : </b>Aucune.<br><b>WARN: </b>Votre anniversaire est affiché sur tous les serveurs où vous êtes et où est Elbot. Pas besoin de mettre plein de fois son anniversaire sur plein de serveurs.<br>C'est cool hein :S</b></p>
+    </div>
+  </div>
+
+  <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
+    <div class="icon-box iconbox-blue">
+      <h4>set_chat / setchat <br> &lt;question&gt;§&lt;réponse&gt;</h4>
+      <p><b>Description : </b>Ajouter ou modifier une réponse à une question sur la commande chat<br><b>Permission : </b>Aucune.<br><b>WARN: </b>Votre réponse sera affiché sur tous les serveurs où se trouvent les bots intégrant cette commande (AntiCoupable V3 et elbot, pour l'instant)</b></p>
+    </div>
+  </div>
+
+  <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
+    <div class="icon-box iconbox-blue">
+      <h4>chat<br> &lt;question&gt;§&lt;réponse&gt;</h4>
+      <p><b>Description : </b>Un assistant virtuel qui se base sur vos réponses.<br><b>Permission : </b>Aucune.<br><b>WARN: </b></b></p>
     </div>
   </div>
 
@@ -615,8 +635,8 @@
           <p>Ici vous trouverez les prochaines commandes prévues.</p>
         </div>
             <div class="icon-box mt-5" data-aos="fade-up" data-aos-delay="300">
-              <h4>set_rep</h4>
-              <p>Si vous souhaitez ou non les réponses automatiques de elbot (désactiver par défaut)</p>
+              <h4>slowmode</h4>
+              <p>Modifier le mode lent dans un salon.</p>
             </div>
 
       </div>
