--- a/elbot/index.html
+++ b/elbot/index.html
@@ -288,7 +288,7 @@
   <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
     <div class="icon-box iconbox-blue">
       <h4>set_rep / set_reply <br> &lt;option&gt;</h4>
-      <p><b>Description : </b>Si vous souhaitez ou non les réponses automatiques de elbot du style : BONBON 🍬 ,Mais si c'est possible avec la carte kiwi... <br><b>Permission : </b>Administrateur<br><b>WARN: </b>Votre anniversaire est affiché sur tous les serveurs où vous êtes et où est Elbot. Pas besoin de mettre plein de fois son anniversaire sur plein de serveurs.<br>C'est cool hein :S</b></p>
+      <p><b>Description : </b>Si vous souhaitez ou non les réponses automatiques de elbot du style : BONBON 🍬 ,Mais si c'est possible avec la carte kiwi... <br><b>Permission : </b>Administrateur<br><b>WARN: </b>Aucun.</b></p>
     </div>
   </div>
 
