--- a/elbot/index.html
+++ b/elbot/index.html
@@ -315,8 +315,8 @@
 
   <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
     <div class="icon-box iconbox-blue">
-      <h4>chat<br> &lt;question&gt;§&lt;réponse&gt;</h4>
-      <p><b>Description : </b>Un assistant virtuel qui se base sur vos réponses.<br><b>Permission : </b>Aucune.<br><b>WARN: </b></b></p>
+      <h4>chat<br> &lt;question&gt;</h4>
+      <p><b>Description : </b>Un assistant virtuel qui se base sur vos réponses.<br><b>Permission : </b>Aucune.<br><b>WARN: </b>Aucun</p>
     </div>
   </div>
 
