--- a/elbot/index.html
+++ b/elbot/index.html
@@ -638,7 +638,10 @@
               <h4>slowmode</h4>
               <p>Modifier le mode lent dans un salon.</p>
             </div>
-
+            <div class="icon-box mt-5" data-aos="fade-up" data-aos-delay="300">
+              <h4>infobot</h4>
+              <p>Toutes les informations du bot réunie en une commande</p>
+            </div>
       </div>
     </section><!-- End Features Section -->
            
