--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
       <div class="social-links">
         <a href="https://instagram.com/el2zay" class="instagram"><i class="bx bxl-instagram"></i></a>
         <a href="https://twitter.com/el2zay" class="twitter"><i class="bx bxl-twitter"></i></a>
-        <a href="https://www.github.com/Elie404" class="github"><i class="bx bxl-github"></i></a>
+        <a href="https://www.github.com/el2zay" class="github"><i class="bx bxl-github"></i></a>
         <a href="https://www.youtube.com/channel/UCZHprEd5P935nlVoFR_kqew" class="youtube"><i class="bx bxl-youtube"></i></a>
         <a href="https://dsc.bio/el2zay" class="discord"><i class="bx bxl-discord"></i></a>
         <a href="mailto:el2zay.contact@gmail.com" class="contact"><i class='bx bx-envelope'></i></i></a>
