--- a/elbot/index.html
+++ b/elbot/index.html
@@ -309,14 +309,15 @@
   <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
     <div class="icon-box iconbox-blue">
       <h4>set_chat / setchat <br> &lt;question&gt;§&lt;réponse&gt;</h4>
-      <p><b>Description : </b>Ajouter ou modifier une réponse à une question sur la commande chat<br><b>Permission : </b>Aucune.<br><b>WARN: </b>Votre réponse sera affiché sur tous les serveurs où se trouvent les bots intégrant cette commande (AntiCoupable V3 et elbot, pour l'instant)</b></p>
+      <p><b>Description : </b>Ajouter ou modifier une réponse à une question sur la commande chat<br><b>Permission : </b>Aucune.<br><b>WARN: </b>Votre réponse sera affiché sur tous les serveurs où se trouvent les bots intégrant cette commande <br>Cliquez sur le titre pour plus d'informations ! </b></p>
     </div>
   </div>
 
   <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
     <div class="icon-box iconbox-blue">
       <h4>chat<br> &lt;question&gt;</h4>
-      <p><b>Description : </b>Un assistant virtuel qui se base sur vos réponses.<br><b>Permission : </b>Aucune.<br><b>WARN: </b>Aucun</p>
+      <h4 class="title"><a href="https://el2zay.is-a.dev/inarretable">Inarrêtable</a></h4>
+      <p><b>Description : </b>Un assistant virtuel qui se base sur vos réponses.<br><b>Permission : </b>Aucune.<br><b>WARN: </b>Cliquez sur le titre pour plus d'informations ! </p>
     </div>
   </div>
 
@@ -365,6 +366,12 @@
     <div class="icon-box iconbox-blue">
       <h4>github</h4>
       <p><b>Description : </b>Pour afficher le code github<br><b>Permission : </b>Aucune<br><b>WARN : </b>Il est disponible sur ce site. Et le repo n'est pas mis à jour manuellement</b>
+    </div>
+  </div>
+  <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
+    <div class="icon-box iconbox-blue">
+      <h4>qr &lt;texte&gt;</h4>
+      <p><b>Description : </b>Créer un QRCode<br><b>Permission : </b>Envoyer des messages.</p>
     </div>
   </div>
   <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
@@ -422,19 +429,6 @@
     </div>
   </div>
 
-  <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
-    <div class="icon-box iconbox-blue">
-      <h4>ticket</h4>
-      <p><b>Description : </b>Pour ouvrir un ticket<br><b>Permission</b> : Aucune.<br><b>WARN : </b>Disponible uniquement sur le serveur Elwatch </p>
-    </div>
-  </div>
-
-  <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
-    <div class="icon-box iconbox-blue">
-      <h4>close</h4>
-      <p><b>Description : </b>Pour fermer un ticket<br><b>Permission</b> : Aucune<br><b>WARN : </b>Disponible uniquement sur le serveur Elwatch </p>
-    </div>
-  </div>
   <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
     <div class="icon-box iconbox-blue">
       <h4>timer/minuteur &lt;secondes&gt;</h4><h10><b>VERSION BETA </b></h10>
@@ -559,8 +553,7 @@
   
     <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
       <div class="icon-box iconbox-blue">
-        <h4>brique</h4> <h10><b>Commande non foncti
-          onnelle pour l'instant</b></h10>
+        <h4>brique</h4> <h10><b>Commande non fonctionnelle pour l'instant</b></h10>
         <p><b>Description : </b>Pour que elbot chante tutititutu<br><b>Permission : </b>Se connecter à un salon vocal et parler.<br><b>WARN : </b>Aucun
       </div>
     </div>
