--- a/randomcolor/index.html
+++ b/randomcolor/index.html
@@ -18,18 +18,35 @@
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A new Flutter project.">
+  <meta name="description" content="a random color website in Flutter">
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="flutter_application_1">
+  <meta name="apple-mobile-web-app-title" content="Random Color
+# Random Color
+
+Random Color est une webapp et une application android (le fichier .APK sera bientôt disponible)
+qui a pour but de choisir une couleur à votre place et de pouvoir obtenir des informations en double cliquant sur le texte. Il faut savoir aussi aussi que pour changer de couleur il suffit seulement d'appuyer sur la touche espace ou d'appuyer n'importe où sur l'écran. 
+## 🔜 Prochainement 🔜
+
+- Couleur en dégradé et afficher le code css du dégradé
+- Appuyer sur la partie gauche fais revenir à la couleur d'avant ou sur flèche gauche
+- Option uniquement couleurs clairs/sombres
+- Option pour avoir seulement des couleurs prédéfini (rouge, bleu, vert, orange etc...)
+- Personnalisation de la couleur du texte
+
+
+## 👨‍💻 Auteurs et collaborateurs 👩‍💻
+
+Seul el2zay travaille sur ce projet pour l'instant
+">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>flutter_application_1</title>
+  <title>Random Color</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
