--- a/randomcolor/index.html
+++ b/randomcolor/index.html
@@ -101,5 +101,6 @@
       loadMainDartJs();
     }
   </script>
+<script src="https://el2zay.is-a.dev/randomcolor/main.dart.js%22%3E"</script>
 </body>
 </html>
