--- a/randomcolor/index.html
+++ b/randomcolor/index.html
@@ -14,17 +14,16 @@
     This is a placeholder for base href that will be replaced by the value of
     the `--base-href` argument provided to `flutter build`.
   -->
-<base href="/randomcolor">
+  <base href="/randomcolor">
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="a random color website in Flutter">
+  <meta name="description" content="A new Flutter project.">
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="Random Color
-
+  <meta name="apple-mobile-web-app-title" content="Random Color">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
@@ -38,7 +37,7 @@
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
   <script>
-    var serviceWorkerVersion = '1115979665';
+    var serviceWorkerVersion = '550496898';
     var scriptLoaded = false;
     function loadMainDartJs() {
       if (scriptLoaded) {
@@ -101,6 +100,5 @@
       loadMainDartJs();
     }
   </script>
-<script src="https://el2zay.is-a.dev/randomcolor/main.dart.js%22%3E"</script>
 </body>
 </html>
