--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-            <h3>Développeur JavaScript et de plus en plus Python</h3>
+              <h3>Développeur débutant Python</h3>
             <p class="fst-italic">
               Voici mes informations et mes adresses de contact.
             </p>
@@ -212,7 +212,7 @@
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">
             <div class="icon"><i class="bx bx-bot"></i></div>
             <h4 class="title"><a href="https://el2zay.is-a.dev/elbot">Elbot</a></h4>
-            <p class="description">Elbot est un bot discord français qui est open source, et dont le code est disponible sur Github. <br> Il est codé en JavaScript. <br> <i>Cliquez sur le titre pour plus d'informations. </i>  </p>
+            <p class="description">Elbot est un bot discord français qui est open source, et dont le code est disponible sur Github. <br> Il est codé en Python. <br> <i>Cliquez sur le titre pour plus d'informations. </i>  </p>
           </div>
           
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
