--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
         <div class="section-title">
           <h2>À propos</h2>
-          <p>Je m'appelle Elie, <br> J'ai commancé à coder en JS il y a pas très longtemps et j'aime bien tester des choses. Je monte aussi des vidéos avec FinalCutPro!</p>
+          <p>Je m'appelle Elie, <br> Je code en Python !</p>
         </div>
 
         <div class="row">
