--- a/elbot/index.html
+++ b/elbot/index.html
@@ -70,7 +70,7 @@
         <div class="col-xl-5 col-lg-6 pt-3 pt-lg-0 order-2 order-lg-1 d-flex flex-column justify-content-center">
           <h1>ELBOT</h1>
           <h2>Un bot Discord qui fait plein de petits trucs</h2>
-          <div><a href="https://discord.com/api/oauth2/authorize?client_id=809344905674489866&permissions=140932673143&scope=bot" class="btn-get-started scrollto">Invitez-moi</a></div>
+          <div><a href="https://discord.com/api/oauth2/authorize?client_id=809344905674489866&permissions=1246349282406&scope=bot%20applications.commands" class="btn-get-started scrollto">Invitez-moi</a></div>
         </div>
 
           <div class="col-xl-4 col-lg-6 order-1 order-lg-2 hero-img" data-aos="zoom-in" data-aos-delay="150">
@@ -499,30 +499,6 @@
   
 
     </section><!-- End Help Section -->
-
-      <!-- ======= comments =========
-      <div id="disqus_thread"></div>
-<script>
-    /**
-    *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-    *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
-    var disqus_config = function () {
-    this.page.url = 'https://el2zay.disqus.com';  // Replace PAGE_URL with your page's canonical URL variable
-    this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-    };
-
-    (function() { // DON'T EDIT BELOW THIS LINE
-    var d = document, s = d.createElement('script');
-    s.src = 'https://el2zay.disqus.com/embed.js';
-    s.setAttribute('data-timestamp', +new Date());
-    (d.head || d.body).appendChild(s);
-    })();
-</script>
-<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
- -->
-
-  
-      
       
       <!-- ======= Features Section ======= -->
     <section id="features" class="features">
